; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/extr_server_timing.c_h2o_server_timing_register.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/extr_server_timing.c_h2o_server_timing_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_server_timing_filter_t = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@on_setup_ostream = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @h2o_server_timing_register(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.st_server_timing_filter_t*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @h2o_create_filter(i32* %6, i32 8)
  %8 = inttoptr i64 %7 to %struct.st_server_timing_filter_t*
  store %struct.st_server_timing_filter_t* %8, %struct.st_server_timing_filter_t** %5, align 8
  %9 = load i32, i32* @on_setup_ostream, align 4
  %10 = load %struct.st_server_timing_filter_t*, %struct.st_server_timing_filter_t** %5, align 8
  %11 = getelementptr inbounds %struct.st_server_timing_filter_t, %struct.st_server_timing_filter_t* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 %9, i32* %12, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.st_server_timing_filter_t*, %struct.st_server_timing_filter_t** %5, align 8
  %15 = getelementptr inbounds %struct.st_server_timing_filter_t, %struct.st_server_timing_filter_t* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i64 @h2o_create_filter(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
